--- a/broccoli/BroccoliMvc/BroccoliMvc.csproj
+++ b/broccoli/BroccoliMvc/BroccoliMvc.csproj
@@ -231,6 +231,7 @@
     <Content Include="Content\img\ic_sh.png" />
     <Content Include="Content\img\img1s.jpg" />
     <Content Include="Content\img\img2s.jpg" />
+    <Content Include="Content\img\instalogo-min.png" />
     <Content Include="Content\img\instalogo.png" />
     <Content Include="Content\img\invest-dream.jpg" />
     <Content Include="Content\img\invest-dream.png" />
@@ -482,14 +483,11 @@
     <Content Include="Scripts\ckeditor\samples\assets\posteddata.php" />
     <Content Include="Scripts\ckeditor\samples\sample_posteddata.php" />
     <Content Include="Scripts\ckeditor\skins\moono\readme.md" />
-    <Content Include="Files\TradingSystems\GarantedProfit.rar" />
     <Content Include="Files\TradingSystems\Instructions\GarantedProfit.pdf" />
-    <Content Include="Files\TradingSystems\Instructions\Max Trade.pdf" />
     <Content Include="Files\TradingSystems\Instructions\Money+.pdf" />
-    <Content Include="Files\TradingSystems\Max Trade.rar" />
-    <Content Include="Files\TradingSystems\Money+.rar" />
     <Content Include="Content\advisors\MaxTrade\5years.json" />
     <Content Include="Content\advisors\GarantedProfit\5years.json" />
+    <Content Include="Files\TradingSystems\Instructions\MaxTrade.pdf" />
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Views\Shared\MainMenu.cshtml" />
