--- a/broccoli/Domain/Domain.csproj
+++ b/broccoli/Domain/Domain.csproj
@@ -94,6 +94,9 @@
     <Compile Include="Roles.cs">
       <DependentUpon>BroccoliEntities.tt</DependentUpon>
     </Compile>
+    <Compile Include="Settings.cs">
+      <DependentUpon>BroccoliEntities.tt</DependentUpon>
+    </Compile>
     <Compile Include="Status.cs">
       <DependentUpon>BroccoliEntities.tt</DependentUpon>
     </Compile>
