--- a/new.broccoli/BroccoliMvc/BroccoliMvc.csproj
+++ b/new.broccoli/BroccoliMvc/BroccoliMvc.csproj
@@ -180,6 +180,7 @@
     <Content Include="Content\img\1371392867_delete.png" />
     <Content Include="Content\img\1371393526_add2-.png" />
     <Content Include="Content\img\2_30.jpg" />
+    <Content Include="Content\img\3162127-empty-purse-last-coins-change.png" />
     <Content Include="Content\img\afbd307d72fb.jpg" />
     <Content Include="Content\img\afbd307d72fb.png" />
     <Content Include="Content\img\bloWsKLnSpc.jpg" />
@@ -194,6 +195,7 @@
     <Content Include="Content\img\dataviz-homepage-headbanner.png" />
     <Content Include="Content\img\demo.png" />
     <Content Include="Content\img\demo_origin.png" />
+    <Content Include="Content\img\Dengi.png" />
     <Content Include="Content\img\depositphotos_1066825-Pineapple.jpg" />
     <Content Include="Content\img\depositphotos_1158059-Young-sunflower-sprout.jpg" />
     <Content Include="Content\img\depositphotos_13564193-Stock-market-and-mobile-banking-on-digital-devices.png" />
