--- a/new.broccoli/BroccoliMvc/BroccoliMvc.csproj
+++ b/new.broccoli/BroccoliMvc/BroccoliMvc.csproj
@@ -183,6 +183,7 @@
     <Content Include="Content\img\3162127-empty-purse-last-coins-change.png" />
     <Content Include="Content\img\afbd307d72fb.jpg" />
     <Content Include="Content\img\afbd307d72fb.png" />
+    <Content Include="Content\img\article_treasure_chest.jpg" />
     <Content Include="Content\img\bloWsKLnSpc.jpg" />
     <Content Include="Content\img\broccoli.png" />
     <Content Include="Content\img\broker-logo.png" />
