--- a/new.broccoli/BroccoliMvc/BroccoliMvc.csproj
+++ b/new.broccoli/BroccoliMvc/BroccoliMvc.csproj
@@ -236,6 +236,7 @@
     <Content Include="Content\img\forexinn_logo.jpg" />
     <Content Include="Content\img\gen10.jpg" />
     <Content Include="Content\img\generic-button-green-bg.png" />
+    <Content Include="Content\img\hp-table-premier.png" />
     <Content Include="Content\img\hr-shadow.jpg" />
     <Content Include="Content\img\ic_sh.png" />
     <Content Include="Content\img\img1s.jpg" />
@@ -245,6 +246,7 @@
     <Content Include="Content\img\invest-dream.jpg" />
     <Content Include="Content\img\invest-dream.png" />
     <Content Include="Content\img\logo-flag.png" />
+    <Content Include="Content\img\mmcis-logo.png" />
     <Content Include="Content\img\pamm2.jpg" />
     <Content Include="Content\img\pamm2.png" />
     <Content Include="Content\img\panteon_logo.jpg" />
